--- a/index.html.html
+++ b/index.html.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <p> Lets Build a wonderful Site! </p>
+    <p> Lets Build a Great Site! </p>
 
     <script type="text/javascript" src="./Give Me a Title!_files/interactions.js.download"></script>    <!-- Insert JQuery Script -->
 
