--- a/index.html
+++ b/index.html
@@ -10,10 +10,49 @@
     <script src="./Give Me a Title!_files/jquery.min.js.download"></script>
 </head>
 <body>
+    <style type="text/css">
+        #img{
+            width: 500px;
+            text-align: left;
 
-    <p> Lets Build a wonderful Site! </p>
+        }
+   .left{
+    width: 30%;
+    margin-left: 50%;
+    margin-right: 20%;
+    margin-top: 15%;
 
-    <script type="text/javascript" src="./Give Me a Title!_files/interactions.js.download"></script>    <!-- Insert JQuery Script -->
+   }
+   .left_img{
+    text-align: right;
+    margin-left: 20%;
+    margin-right: 50%;
+    margin-top: 15%;
+
+   }
+.input_clas {
+    width: 100%;
+    font-size: 12px;
+}
+.class_text{
+    color: orange;
+}
+</style>
+
+<div class="left">
+    <div class="left_img">
+        <img id="img" src="https://juhikedia.wordpress.com/">
+    </div>
+
+    <p class='class_text'> Hello! </p>
+
+    <p> My name is Juhi Kedia and I’m from Jaipur, India. I have been obsessed with creativity ever since I remember. For me, Art always speaks where words are unable to express. I see design in every aspect be it a building’s perspective, cuts in dresses, the flexibility in furniture, the body of an automobile, or even a cup I drink coffee from. Along-with my love for art and design, I am equally passionate for nature, dance, sports and academics. I would like to pursue a field of study which helps me enhance my knowledge and sharpen my perspective for a purposeful life. I am interested in pursuing either the P or the E track. </p>
+    <p> What's your interest? </p>
+    <input class="input_class" type="text" name="input_field" placeholder="I would love to know you">
+
+</div>   
+
+ <script type="text/javascript" src="./Give Me a Title!_files/interactions.js.download"></script>    <!-- Insert JQuery Script -->
 
 
 
