--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <style type="text/css">
         #img{
             width: 500px;
-            text-align: left;
+            text-align: centre;
+            display: inline-block ;
+
 
         }
    .left{
@@ -25,8 +27,8 @@
    }
    .left_img{
     text-align: right;
-    margin-left: 20%;
-    margin-right: 50%;
+    margin-left: 50%;
+    margin-right: 20%;
     margin-top: 15%;
 
    }
@@ -37,11 +39,60 @@
 .class_text{
     color: orange;
 }
+body {
+            margin: 0;
+        }
+
+.nav-bar {
+            width: 100%;
+            height: 100px;
+            margin: 0;
+            background: white;
+}
+
+.nav-bar > .element {
+            width: 24%;
+            line-height: 50px;
+            text-align: center;
+            color: orange;
+            display: inline-block;
+            margin: 0;
+            font-family: Arial;
+            text-decoration: none;
+        }
+        .nav-bar > .element:hover { 
+            text-decoration: underline;
+        }   
+        .content {
+            width: 80%;
+            margin-left: 10%;
+        }
+.nav-bar1 > .element1 {
+            width: 100%;
+            line-height: 50px;
+            text-align: center;
+            color: orange;
+            display: inline-block;
+            margin-top: 0;
+            font-family: Arial;
+            text-decoration: none;
+
+        }
 </style>
+
+<div class="nav-bar">
+        <a href="https://jkedia.github.io/MyWebsite/" class="element"> Home </a>
+        <a href="https://jkedia.github.io/MyWebsite/" class="element"> My work </a>
+        <a href="https://jkedia.github.io/MyWebsite/" class="element"> Resume </a>
+        <a href="https://jkedia.github.io/MyWebsite/" class="element"> Contact </a>
+
+</div>
+<div class="nav-bar1">
+    <a href="https://jkedia.github.io/MyWebsite/" class="element1"> Juhi Kedia </a>
 
 <div class="left">
     <div class="left_img">
-        <img id="img" src="https://juhikedia.wordpress.com/">
+        <img id="img" src="https://github.com/jkedia/MyWebsite/blob/main/juhikedia_image.JPG">
     </div>
 
     <p class='class_text'> Hello! </p>
