--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <style type="text/css">
+        
+        @media (max-width: 480px) {
+p { font-size: 12px; }
+}
         #img{
             width: 500px;
             text-align: centre;
