--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <style type="text/css">
+        
+        @media only screen and (min-width: 768px) and (max-width: 959px){
+...
+}
      
         #img{
             width: 500px;
