--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ body {
             margin-left: 10%;
         }
         
+        @media (max-device-width: 480px) {...
+        }
         
 
 </style>
@@ -125,10 +127,6 @@ body {
 
 
     <script src="main.js"></script>
-@media only screen and (min-width: 400px) and (max-width: 959px){
-...
-}
-
 
 
 </body></html>
