--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@ body {
             margin-left: 10%;
         }
         
-        @media (max-device-width: 480px) {...
-        }
-        
+     @media (min-width: 400px) and (max-width: 959px){ ... }
 
 </style>
 
