--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@ body {
         }
         
      @media (min-width: 400px) and (max-width: 959px){ ... }
-
+.move-me:hover {
+    -webkit-transform: translate(0%, 42%);
+}
 </style>
 
 </div>
