--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@ body {
             margin-left: 10%;
         }
         
-     @media(min-width: 400px) and (max-width: 959px){ ... }
+     @media (min-width: 400px) and (max-width: 959px){ 
 .move-me:hover {
     -webkit-transform: translate(0%, 42%);
-}
+         }}
 </style>
 
 </div>
